Fix typos and update links in HTML and update descriptions in components

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Je suis un développeur web. Je suis à la
+    recherche d'un emploi en tant que développeur web front-end, back-end."
+    />
+    <meta
+      name="keywords"
+      content="développeur, web, front-end, back-end, full-stack, développeur web, développeur front-end, développeur back-end, développeur full-stack, développeur web front-end, développeur web back-end, développeur web full-stack, développeur front-end back-end, développeur front-end full-stack, développeur back-end full-stack, développeur front-end back-end full-stack, développeur web front-end back-end, développeur web front-end full-stack, développeur web back-end full-stack, développeur web front-end back-end full-stack, développeur web front-end back-end, développeur web front-end full-stack, développeur web back-end full-stack, développeur web front-end back-end full-stack, développeur web front-end back-end, développeur web front-end full-stack, développeur web back-end full-stack, développeur web front-end back-end full-stack, développeur web front-end back-end, développeur web front-end full-stack, développeur web back-end full-stack"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Anthony Douat" />
+    <link rel="canonical" href="/" />
+    <title>PorteFolio Anthony Douat</title>
   </head>
   <body>
     <div id="root"></div>
